.provarCaches/00D5f000005vwGkEAI/objects/rstk__syapprv__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_syapprv</customHelpPage>
    <description>syapprv__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__syapprv_apprvid__c</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syapprv_apprvid__c</fullName>
        <inlineHelpText>This is the Approval ID and will be used when establishing dollar thresholds in Group Approval Levels.</inlineHelpText>
        <label>Approval ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syapprv_descr__c</fullName>
        <inlineHelpText>This is a user defined descriptive name of the Approver.</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syapprv_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable Division</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>divsyapprvs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syapprv_orgid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Group for which the Approval ID is applicable.</inlineHelpText>
        <label>Organizational Department</label>
        <referenceTo>rstk__syorg__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>SYAPPRVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syapprv_password__c</fullName>
        <inlineHelpText>The Password set here will be used to authenticate the Approver during the Approval process</inlineHelpText>
        <label>Approval Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syapprv_pwdentry__c</fullName>
        <inlineHelpText>The Password set here will be used to authenticate the Approver during the Approval process</inlineHelpText>
        <label>Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Approver</label>
    <listViews>
        <fullName>rstk__RS_Approvers</fullName>
        <columns>NAME</columns>
        <columns>rstk__syapprv_div__c</columns>
        <columns>rstk__syapprv_apprvid__c</columns>
        <columns>rstk__syapprv_descr__c</columns>
        <columns>rstk__syapprv_orgid__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Approvers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Approver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>